--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,5 +28,5 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn clean verify
+      run: mvn clean verify --batch-mode
     
